--- a/package.json
+++ b/package.json
@@ -1,36 +1,39 @@
 {
-  "name": "swig-marked",
+  "name": "swig-remarkable",
   "version": "0.0.1",
-  "description": "Markdown filters and tags for swigs, backed by marked",
+  "description": "Markdown filters and tags for swigs, backed by remarkable",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha -u tdd test/*"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mvhenten/swig-marked.git"
+    "url": "git://github.com/takkaria/swig-remarkable.git"
   },
   "keywords": [
     "swig",
     "markdown",
-    "marked",
+    "remarkable",
     "tags",
     "filters",
     "template"
   ],
-  "author": "Matthijs van Henten <matthijs@ischen.nl>",
+  "author": [
+    "Matthijs van Henten <matthijs@ischen.nl>",
+    "Andi Sidwell <andi@takkaria.org>"
+  ],
   "license": "GPL",
   "bugs": {
-    "url": "https://github.com/mvhenten/swig-marked/issues"
-  },
-  "dependencies": {
-    "marked": "~0.3.1"
+    "url": "https://github.com/mvhenten/swig-remarkable/issues"
   },
   "devDependencies": {
-    "js-beautify": "~1.4.2",
-    "jshint": "~2.4.3",
-    "Faker": "~0.5.11",
-    "mocha": "~1.17.1",
-    "swig": "~1.3.2"
+    "js-beautify": "^1.4.2",
+    "jshint": "^2.4.3",
+    "faker": "^3.1.0",
+    "mocha": "^1.17.1",
+    "swig": "^1.3.2"
+  },
+  "dependencies": {
+    "remarkable": "^1.6.2"
   }
 }
